fix: center heading on small devices

--- a/src/style/content.less
+++ b/src/style/content.less
@@ -28,9 +28,13 @@ footer {
 
 header {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     margin-bottom: 2em;
+
+    @media @sm {
+        justify-content: space-between;
+    }
 }
 
 h1,
@@ -57,11 +61,6 @@ h1 {
     margin-top: 0;
     margin-bottom: 0;
     font-size: 2.5em;
-    text-align: center;
-
-    @media @sm {
-        text-align: left;
-    }
 }
 
 h2 {
